# wallet-control

./: .gitignore  Makefile  README.md  pyproject.toml
src/cashflow/application/: services.py
src/cashflow/domain/: models.py  repositories.py
src/cashflow/infrastructure/: database.py  repositories.py
src/cashflow/interfaces/: cli.py
src/cashflow/interfaces/gui/: __init__.py  add_expense_dialog.py  app.py  main_window.py
src/cashflow/interfaces/gui/widgets/: __init__.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/application/: test_service.py
tests/unit/domain/: test_models.py  test_repositories.py
tests/unit/infrastructure/: test_database.py  test_repositories.py
