[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cashflow"
version = "0.1.0"
description = "Gestión de gastos personales y flujo de caja"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
cashflow = "cashflow.interfaces.cli:app"

# ✅ Configuración CRÍTICA para src layout en Hatch
[tool.hatch.build]
sources = ["src"]  # <-- Esto le dice a Hatch que 'src' es la raíz de los imports

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=cashflow {args:tests}"  # Cobertura sobre el paquete, no src/cashflow
lint = "ruff check src/cashflow tests"
fmt = "ruff format src/cashflow tests"

[tool.pytest.ini_options]
pythonpath = ["src"]  # Para que pytest encuentre los imports
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.coverage.run]
source = ["src/cashflow"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]