[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cashflow"
version = "0.1.0"
description = "Gestión de gastos personales y flujo de caja"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
cashflow = "cashflow.interfaces.cli:app"

# ✅ Configuración CRÍTICA para src layout en Hatch
[tool.hatch.build]
sources = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=cashflow {args:tests}"
lint = "ruff check src/cashflow tests"
fmt = "ruff format src/cashflow tests"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "gui: tests that require GTK 4 + libadwaita",
    "integration: integration tests",
    "unit: unit tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["cashflow"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.coverage.run]
source = ["src/cashflow"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[project.optional-dependencies]
gui = [
    "pygobject>=3.44.0",
]

[project.urls]
Homepage = "https://github.com/vmgabriel/wallet-control"
Documentation = "https://github.com/vmgabriel/wallet-control#readme"